# across_optitrack

./: CMakeLists.txt  README.md  cmake_install.cmake  index.html  manifest.xml  package.xml  params.json
Wiki/: Menu.pdn  SettingsMOCAP.pdn  SettingsROS.pdn
launch/: alpha_one.txt  alpha_one.txt~  ardrone.txt  drones.txt  drones.txt~  optitrack.launch  optitrack_ardrone.launch
src/: DvcZb2TN.html  MOCAPNode.cpp  MOCAPSocket.cpp  MOCAPSocket.h  kalman_filter_data.cpp  kalman_filter_data.h  mocap_tfpub.cpp  optitrack_vision.cpp
src/ACROSS_Optitrack/msg/: _RigidBody.py  _Vector3F.py  __init__.py  _pc2quadcopter.py  _quadcopter2pc.py
